--- a/DesafioAula/style.css
+++ b/DesafioAula/style.css
@@ -1,5 +1,30 @@
+body{
+  display: flex;
+  margin: 0;
+}
+
+ul{
+    padding: 5px;
+    background-color: aqua;
+}
+
+li{
+    width: 50px;
+    list-style: none;
+    padding: 5px;
+    margin-bottom: 5px;
+    background-color: black;
+    border-radius: 5px;
+}
+
+a{
+    color: white;
+    text-decoration: none;
+}
+
 table{
     border: 1px solid black;
+    margin: 50px;
 }
 
 th, td {
@@ -9,23 +34,4 @@ th, td {
 
 th {
   background-color: aqua;
-}
-
-ul{
-    padding: 5px;
-    background-color: aqua;
-    width: 60px;
-}
-
-li{
-    width: 50px;
-    list-style: none;
-    padding: 5px;
-    margin-bottom: 5px;
-    background-color: gray;
-    border-radius: 5px;
-}
-
-a{
-    text-decoration: none;
 }
