--- a/03 - FLEXBOX/style.css
+++ b/03 - FLEXBOX/style.css
@@ -10,6 +10,7 @@ header{
     align-items: center;
     background-color: lightgray;
     height: 15vh;
+    width: 100%;
 }
 
 #logo{
@@ -29,7 +30,6 @@ ul{
 }
 
 a{
-    background-color: rgba(116, 116, 147, 0.411);
     padding: 7px;
     margin-right: 15px;
     border-radius: 5px;
